2009-10-14  Victor Wang  <victorw@chromium.org>

Reviewed by David Hyatt.

        Round non-integer line height values.

        Change webkit to rounding non-integer line height values
        instead of truncating them. This fixes a layout test
        failure on Windows and matches the calculation in IE and Firefox.

        https://bugs.webkit.org/show_bug.cgi?id=24434


Canonical link: https://commits.webkit.org/41041@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49567 268f45cc-cd09-0410-ab3c-d52691b4dbfc